--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ import ProductCard from "../components/ProductCard.astro";
       </div>
 
       <!-- Right: Screenshot -->
-      <div class="hidden lg:block w-full lg:w-1/2">
+      <div class="hidden lg:block lg:w-[55%] shrink-0">
         <div class="rounded-xl overflow-hidden border border-gray-700/60 shadow-[0_4px_40px_rgba(0,0,0,0.5)]">
           <!-- Window chrome -->
           <div class="flex items-center gap-2 px-4 py-2.5 bg-gray-800/80 border-b border-gray-700/60">
